--- a/cloud-init.sh.j2
+++ b/cloud-init.sh.j2
@@ -2,7 +2,7 @@
 
 sudo su -
 touch /root/cloud-init_handler.sh 
-chwon root /root/cloud-init_handler.sh
+chown root /root/cloud-init_handler.sh
 chmod 0644 /root/cloud-init_handler.sh
 echo " 
 #!/usr/bin/env bash
@@ -38,6 +38,7 @@ handle_instance_success"        > /root/cloud-init_handler.sh
 
 # Run commands
 cd /root
+yum install -y epel-release
 yum install -y git ansible
 sudo chmod +x /root/cloud-init_handler.sh
 git clone "{{ dynamic_repo }}"
