--- a/cloud-init.yml.j2
+++ b/cloud-init.yml.j2
@@ -17,20 +17,21 @@ write_files:
           git config --global user.email "{{ git_email }}"
           git config --global user.name "{{ git_username }}"
           log=$(cat /var/log/cloud-init-output.log | grep -i 'error\|failed')
-          curl -H 'Content-Type: application/json' -d "{ \"error\" :\"$(echo $log)\" }"  -X POST {{API_URL}}/v1/control/instance/$instance_id
+          curl -v -H 'Content-Type: application/json' -d "{ \"error\" :\"$(echo $log)\" }"  -X POST {{API_URL}}/v1/control/instance/$instance_id
         }
 
         handle_instance_success() {
-          curl -H 'Content-Type: application/json' -d '{"status":"activate"}' -X PATCH {{API_URL}}/v1/control/instance/$instance_id
+          curl -v -H 'Content-Type: application/json' -d '{"status":"activate"}' -X PATCH {{API_URL}}/v1/control/instance/$instance_id
         }
 
         if ! cloud-init status --wait ; then
-        echo "Cloud-init failed"
-        {% if not debug is defined or not debug  %}
-        handle_instance_error
-        {% endif %}
-        exit 1
+          echo "Cloud-init failed"
+          {% if not debug is defined or not debug  %}
+          handle_instance_error
+          {% endif %}
+          exit 1
         fi
+
         echo "Cloud init successfully deployed"
         handle_instance_success
         exit 1
