--- a/cloud-init.sh.j2
+++ b/cloud-init.sh.j2
@@ -1,39 +1,6 @@
 #!/usr/bin/env bash
 
 sudo su -
-
-handle_instance_error() {
-  instance_id="$1"
-  cd /root/{{ gitlab_project_name }}
-  git config --global user.email "{{ git_email }}"
-  git config --global user.name "{{ git_username }}"
-  log=$(cat /var/log/cloud-init-output.log | grep -i 'error\|failed')
-  echo "[handle_instance_error] perform the PATCH request to instance ${instance_id}"
-  curl -v -H 'Content-Type: application/json' -d "{ \"error\" :\"$(echo $log)\" }"  -X POST {{API_URL}}/v1/control/instance/$instance_id
-}
-
-handle_instance_success() {
-  instance_id="$1"
-  echo "[handle_instance_success] perform the PATCH request to instance ${instance_id}"
-  curl -v -H 'Content-Type: application/json' -d '{"status":"activate"}' -X PATCH {{API_URL}}/v1/control/instance/$instance_id
-}
-
-cloud_init_handler() {
-    instance_id="$1"
-
-    if ! cloud-init status --wait ; then
-        echo "Cloud-init failed"
-        {% if not debug is defined or not debug  %}
-        handle_instance_error "${instance_id}"
-        {% endif %}
-        exit 1
-    fi
-
-    echo "Cloud init successfully deployed"
-    handle_instance_success "${instance_id}"
-    exit 1
-}
-
 cd /root
 
 if lsb_release -d >/dev/null 2>&1; then
@@ -62,6 +29,7 @@ sudo git config --global user.email "{{ git_email }}"
 sudo git config --global user.name "{{ git_username }}"
 sudo git add .
 sudo git commit -m "Finish deployment of {{ instance_name }}"
-cloud_init_handler {{ instance_id }} &
 sudo git push origin main
+echo "Perform the PATCH request to instance {{ instance_id }}"
+curl -v -H 'Content-Type: application/json' -d '{"status":"activate"}' -X PATCH {{API_URL}}/v1/control/instance/{{ instance_id }}
 rm -rf ../{{ gitlab_project_name }}
